fixed signout alignment

--- a/docs/assignment7/public/css/tooplate-infinite-loop.css
+++ b/docs/assignment7/public/css/tooplate-infinite-loop.css
@@ -559,6 +559,7 @@ figure.effect-honey:hover h2 i {
 	color: #fff;
 	background-color: #369;
 	width: 50%;
+  max-width:250px;
 	margin-bottom: 60px;
 }
 
